<resources>
    <string name="app_name">Guardián Rutas</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="toolbar_tittle_Maps">Guardian</string>
    <string name="title_activity_maps_rutas">Map</string>
    <string name="title_activity_maps_ruta">MapsActivityRuta</string>
    <string name="title_bar_maps_rutas">Guardian</string>
    <string name="title_activity_new_map">Recorrido</string>
    <string name="title_activity_point_end">Selección de llegada</string>

    <string name="vacio"></string>
    <string name="perfildeusuario">Perfil  de usuario</string>
    <string name="layoutpredata">Monitor o conductor</string>
    <string name="layoutCreateAccount">Crear cuenta</string>
    <string name="layoutReestablecer">Reestablecer contraseña</string>
    <string name="layoutCreateRoute">Crea una ruta</string>


    <!--Text-->

    <string name="transitionintro">Le ayudamos a hacer la diferencia en el servicio de transporte escolar y empresarial, controlando, coordinando y gestionando, de forma ágil y efectiva.</string>
    <string name="validadorphone">Este número de celular tiene errores, verifíquelo para poder continuar.</string>
    <string name="validadorphonezero">Debe incluir su número de celular.</string>
    <string name="validadorpersonalnamevacio">Debe registrar sus nombres.</string>
    <string name="validadorpersonallastnamevacio">Debe registrar sus apellidos.</string>
    <string name="validadorpersonal">Debe registrar la totalidad de los espacios.</string>
    <string name="validadorroutename">Debe darle un nombre a la ruta.</string>


    <string name="textviewphone">Número de celular</string>
    <string name="textnamedriver">Nombres</string>
    <string name="textlastnamedriver">Apellidos</string>
    <string name="textmatricula">Número de matricula</string>
    <string name="textcreateroute">Si desea crear ruta</string>
    <string name="textcreateroller">Si esta relevando a otra ruta</string>
    <string name="textcreatecode">Comparta este código con los usuarios de la ruta.</string>
    <string name="textroutename">Coloque un nombre al recorrido que realizara.</string>
    <string name="textrelief">Ingrese el código suministrado por el otro conductor.</string>
    <string name="textralertcrash">Accidente</string>
    <string name="textralertengine">Daño mecánico</string>
    <string name="textralerttraffic">Congestión vehicular</string>
    <string name="textralert">Reporte incidentes a los usuarios en tiempo real.</string>
    <string name="textconfirmation">Confirmación y contacto directo con usuarios.</string>
    <string name="textapproach">Abordaje</string>
    <string name="textcall">Llamada</string>
    <string name="textchat">Mensaje</string>
    <string name="textroutelist">Seleccione el recorrido que va a realizar.</string>
    <string name="textremovelist">Mantenga pulsado el recorrido por unos segundos para eliminarlo.</string>
    <string name="textcreatenewroute">Cree una nueva ruta dando clic aquí.</string>


    <string name="textnavigatorguardian">Guardián</string>
    <string name="textnavigatorsubguardian">Control de rutas</string>

    <string name="textmenuplusroute">Agregar ruta</string>
    <string name="textmenuminusroute">Eliminar ruta</string>
    <string name="textmenualertroute">Alertas</string>
    <string name="textmenuchatroute">Chat</string>
    <string name="textmenucallroute">Llamada</string>
    <string name="textmenuaddroute">Compartir ruta a:</string>
    <string name="textmenuusersroute">Usuarios</string>
    <string name="textmenudriversroute">Otro conductor</string>
    <string name="textmenuchangeroute">Cambiar ruta</string>

    <string name="textmenuperfil">Editar perfil</string>
    <string name="textmenuconfig">Configuración</string>
    <string name="textmenuoutlogin">Cerrar sesión</string>


    <!--Title-->

    <string name="toolbartitlephone">Registro telefónico</string>
    <string name="toolbartitlepersonal">Registro personal</string>
    <string name="toolbartitleidcar">Registro matricula vehículo</string>
    <string name="toolbartitlenewcreate">Crear ruta o asignar relevo</string>
    <string name="toolbartitlecreateroute">Compartir código ruta</string>
    <string name="toolbartitleroutename">Nombre de ruta</string>
    <string name="toolbartitlerelief">Codigo de relevo</string>
    <string name="toolbartitleroutelist">Selección recorridos</string>
    <string name="toolbartitleremoveroute">Eliminar ruta</string>


    <string name="buttomnext">SIGUIENTE</string>
    <string name="buttomcreate">CREAR RUTA</string>
    <string name="buttominsertcode">INGRESA CODIGO</string>
    <string name="menu_signout">Salir</string>
    <string name="menu_addRoute">Agregar ruta</string>
    <string name="title_activity_options_route">OptionsRouteActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="toolbartitlenewcreatemenu">Nueva ruta</string>
    <string name="toolbartitlealert">Reporte de alertas</string>
    <string name="toolbartitleuserlist">Contactos de ruta</string>
    <string name="toolbartitlecall">Contacto usuario</string>


    <string name="alertGps">El sistema GPS esta desactivado,¿Desea activarlo?</string>
    <string name="yesGps">Si</string>
    <string name="noGps">No</string>
    <string name="toolbartitlepoint">Punto de llegada</string>
    <string name="toolbartitlecheck">Abordaje o descenso</string>


    <string name="helpPoint">Mantenga presionado con su dedo en el mapa el punto al cual llegara la ruta. Recuerde que puede moverse por el mapa, acercarlo y alejarlo de ser necesario.</string>
    <string name="helpConfirm">Ok</string>

    <string name="helpPointTwo">Aparecerá un marcador que le confirma el lugar con exactitud, puede cambiarlo cuantas veces quiera, solamente debe seleccionar otro punto. </string>
    <string name="helpPointThree">Cuando este seguro de su elección. Presione el marcador por unos segundos para confirmar. </string>


    <string name="alertone">Envió una alerta ¡Estamos en un congestión vehicular grave!, a sus usuarios de ruta.</string>
    <string name="alerttwo">Envió una alerta ¡Sufrimos un accidente!, a sus usuarios de ruta.</string>
    <string name="alertthree">Envió una alerta ¡Tenemos un daño mecánico!, a sus usuarios de ruta.</string>
    <string name="toolbartitleedit">Perfil de ruta</string>
    <string name="textbtnCancel">Cancelar</string>
    <string name="textbtnOk">Ok</string>
    <string name="title_activity_pruebamap">Map</string>
    <string name="toolbartitleuser">Usuarios de ruta</string>
    <string name="textabord">Presione cada usuario para confirmar su abordaje</string>
    <string name="texteditperfil">Actualice la información de perfil para mejorar el servicio.</string>
    <string name="toolbartitleeditdriver">Perfil de conductor</string>

    <string name="calldialog">¿Hacer llamada?</string>
    <string name="closesesion">Guardián necesita tener su GPS activo para funcionar, al seleccionar NO, la aplicación por seguridad cerro sesión y así proteger sus datos. Inicie sesión y active el GPS para disfrutar del servicio.</string>

    <string name="star">¿Va a iniciar el recorrido ahora? </string>

    <string name="routetext">¿El recorrido es de ida o regreso?</string>
    <string name="ida">Ida</string>
    <string name="regreso">Regreso</string>

    <string name="removeinfo">Si elimina un recorrido nunca más podrá recuperar históricos he información del mismo.</string>
    <string name="removeconfirm">¿Está seguro de eliminar este recorrido?</string>
    <string name="helpselect">¿No tiene recorridos?</string>
    <string name="helpcreate">Cree uno aquí.</string>

    <string name="hacerGps">Guardian necesita que active el Gps de su celular para su funcionamiento.</string>
    <string name="selectGps">Guardian necesita que active el Gps para seleccionar un recorrido y continuar</string>
    <string name="proveedorGps">Su proveedor Gps esta desactivado.</string>

    <string name="ayudaGps">El sistema Gps de su celulara no identifica su posicion actual, busque un lugar cercano a la calle o ventana</string>
    <string name="textnameroute">Nombre de recorrido</string>

</resources>
