<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_change"
            android:icon="@drawable/menuchange"
            android:title="@string/textmenuchangeroute" />

        <item
            android:id="@+id/nav_plus"
            android:icon="@drawable/menuplus"
            android:title="@string/textmenuplusroute" />
        <item
            android:id="@+id/nav_minus"
            android:icon="@drawable/menuminus"
            android:title="@string/textmenuminusroute" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/menualert"
            android:title="@string/textmenualertroute" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/menuchat"
            android:title="@string/textmenuchatroute" />

        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/menucall"
            android:title="@string/textmenucallroute" />
    </group>

    <item android:title="@string/textmenuaddroute">
        <menu>
            <item
                android:id="@+id/nav_users"
                android:icon="@drawable/menuusers"
                android:title="@string/textmenuusersroute" />
            <item
                android:id="@+id/nav_drivers"
                android:icon="@drawable/menudrivers"
                android:title="@string/textmenudriversroute" />
        </menu>
    </item>

</menu>
