<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.controlderuta.guardianroute.NewAlertActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarselectlist"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        app:popupTheme="@style/AppTheme.PopupOverlay" >

        <Button
            android:id="@+id/backalert"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="@dimen/letter20dp"
            android:background="@drawable/backarrowwhite"

            />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbartitlealert"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/letter20dp"
            android:layout_gravity="center" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/windtline2dp"
        android:background="@color/colorPrimaryDark">

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textralert"
                android:textColor="@color/colorAccentTwo"
                android:textSize="@dimen/principalletter16dp"
                android:gravity="center"
                android:layout_marginLeft="@dimen/margin30dp"
                android:layout_marginRight="@dimen/margin30dp"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin10dp"
                android:layout_marginRight="@dimen/margin10dp"
                android:background="@color/colorWhite"
                android:layout_marginBottom="5dp"
                android:elevation="2dp"
                >

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabalerttrafic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin30dp"
                    android:background="@color/colorPrimaryDark"
                    android:elevation="6dp"
                    android:src="@drawable/traffic"
                    app:backgroundTint="@color/colorPrimaryDark" />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin30dp"
                    android:layout_marginRight="@dimen/margin30dp"
                    android:text="@string/textralerttraffic"
                    android:textColor="@color/colorSecondarytext"
                    android:textSize="@dimen/principalletter16dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin5dp"
                android:layout_marginLeft="@dimen/margin10dp"
                android:layout_marginRight="@dimen/margin10dp"
                android:background="@color/colorWhite"
                android:elevation="2dp"
                >

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabalertemergecy"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin70dp"
                    android:background="@color/colorPrimaryDark"
                    android:elevation="6dp"
                    android:layout_marginLeft="@dimen/margin30dp"
                    android:src="@drawable/crash"
                    app:backgroundTint="@color/colorPrimaryDark" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin30dp"
                    android:layout_marginRight="@dimen/margin30dp"
                    android:text="@string/textralertcrash"
                    android:textColor="@color/colorSecondarytext"
                    android:textSize="@dimen/principalletter16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/margin10dp"
                android:layout_marginRight="@dimen/margin10dp"
                android:background="@color/colorWhite"
                android:elevation="2dp"
                >

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabalertcrash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:elevation="2dp"
                    android:layout_marginLeft="@dimen/margin30dp"
                    android:src="@drawable/engine"
                    app:backgroundTint="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin30dp"
                    android:layout_marginRight="@dimen/margin30dp"
                    android:text="@string/textralertengine"
                    android:textColor="@color/colorSecondarytext"
                    android:textSize="@dimen/principalletter16dp" />

            </LinearLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

