<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.controlderuta.guardianroute.RouteNameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarWhite"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbartitleroutename"
                android:textColor="@color/colorSecondarytext"
                android:textSize="@dimen/letter22dp"
                android:layout_gravity="center" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="@dimen/windtline2dp"
            android:background="@color/colorPrimaryDark">

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8.5"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin30dp"
                    android:layout_marginLeft="@dimen/margin30dp"
                    android:layout_marginRight="@dimen/margin30dp"
                    android:gravity="center"
                    android:text="@string/textroutename"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/principalletter18dp" />

                <EditText
                    android:id="@+id/routeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin30dp"
                    android:layout_marginRight="@dimen/margin30dp"
                    android:background="@drawable/edittextform"
                    android:inputType="textCapWords"

                    android:textAlignment="center"
                    android:textSize="@dimen/principalletter18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSigRouteName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin70dp"
                    android:layout_marginLeft="@dimen/margin5dp"
                    android:layout_marginRight="@dimen/margin5dp"
                    android:text="@string/buttomnext"
                    android:textAlignment="center"
                    android:textSize="@dimen/letter25dp"
                    android:elevation="10dp"
                    android:theme="@style/RaisedButtonDark" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
